# med_ragai_api

./: .dockerignore  .env-example  .gitignore  Dockerfile  LICENSE  README.md  agent.py  evaluate.py  logs.py  main.py  pyproject.toml  pytest.ini  rag_agent.py  requirements.txt
.github/workflows/: publish-ghcr.yaml
dataset/: dataset_processing.ipynb  disease_symptoms.csv
dataset/processed/: disease_icd.csv  disease_symptoms.csv
dataset/raw/: cleaned_dataset_with_english_translation.xlsx
disease_docs/: disease_documents.jsonl  process_csv.py
src/: dependencies.py  process_csv.py  rag_agent.py  schemas.py  ui.py  vectors_store.py
src/agent/: __init__.py  process_csv.py  rag_agent.py  vectors_store.py
src/docs/: disease_documents.jsonl
src/llm/: __init__.py  diagnosis_assistant.py  dispatcher.py  guardrails.py  local_agent.py  tools.py
src/rag/: __init__.py  diagnosis_assistant.py  process_csv.py  vectors_store.py
src/routes/: diagnosis.py
tests/: test_api.py  test_dispatcher.py  test_guardrails.py  test_parser.py
