[project]
name = "med-ragai-api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.121.2",
    "langchain>=1.0.7",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.0.3",
    "pandas>=2.3.3",
    "pandas-stubs==2.3.2.250926",
    "python-dotenv>=1.2.1",
]
