[project]
name = "med_rag_assistant"
version = "1.0.0"
description = "A Retrieval-Augmented Generation (RAG) based medical diagnosis assistant designed to assist in medical diagnosis."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.121.2",
    "gradio>=6.2.0",
    "httpx>=0.28.1",
    "langchain>=1.0.7",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.0.3",
    "langchain-huggingface>=1.2.0",
    "pandas>=2.3.3",
    "pandas-stubs==2.3.2.250926",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.0",
]

[tool.pytest.ini_options]
pythonpath = "."
log_cli = "true"
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s"
log_file = "logs/pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"
testpaths = [
    "tests",
]
python_files = "test_*.py"
